[MOB] Update dependencies & yarn.lock

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "cra-template-typescript": "1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "cra-template-typescript": "1.0.3",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
