--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,6 +8,8 @@
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "cra-template-typescript": "1.0.3",
