--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,7 +12,14 @@
     "@testing-library/react": "^10.0.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
     "cra-template-typescript": "1.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   },
   "scripts": {
