--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start-client": "yarn workspace client start",
     "test-client": "yarn workspace client test",
     "lint-client": "yarn workspace client eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint-client-fix": "yarn workspace client eslint . --fix --ext .js,.jsx,.ts,.tsx"
+    "format-client": "yarn workspace client eslint . --fix --ext .js,.jsx,.ts,.tsx"
   },
   "workspaces": [
     "packages/*"
