--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.5.0",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "eslint": "^6.8.0",
