--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,7 +35,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "yarn lintfix",
-      "pre-push": "yarn test"
+      "pre-push": "yarn test --coverage --watchAll=false"
     }
   },
   "eslintConfig": {
