--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn format-client",
-      "pre-push": "yarn test-client"
+      "pre-commit": "yarn test-client --watchAll=false",
+      "pre-push": "yarn test-client --watchAll=false"
     }
   },
   "workspaces": [
