--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "lint-staged": {
     "packages/**/*.{js,jsx,ts,tsx}": [
-      "yarn format-client", "git add"
+      "yarn format-client"
     ]
   },
   "husky": {
