--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "lint-client": "yarn workspace client eslint . --ext .js,.jsx,.ts,.tsx",
     "lintfix-client": "yarn workspace client eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
+  "lint-staged": {
+    "packages/**/*.{js,jsx,ts,tsx}": [
+      "yarn format-client"
+    ]
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lintfix-client",
-      "pre-push": "yarn test"
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn test-client --coverage --watchAll=false"
     }
   },
   "workspaces": [
