[Mob] Run unit tests in container

--- a/batect.yml
+++ b/batect.yml
@@ -5,9 +5,6 @@ containers:
       - local: .
         container: /code
     working_directory: /code
-    ports:
-      - local: 3000
-        container: 3000
     run_as_current_user:
       enabled: true
       home_directory: /home/container-user
@@ -18,4 +15,13 @@ tasks:
     description: Start the poker game
     run:
       container: poker-game
-      command: yarn workspace client start
+      command: yarn start-client
+      ports:
+        - local: 3000
+          container: 3000
+
+  run-unit-tests:
+    description: Run the unit tests
+    run:
+      container: poker-game
+      command: yarn test-client --watchAll=false
