--- a/batect.yml
+++ b/batect.yml
@@ -4,10 +4,15 @@ containers:
     volumes:
       - local: .
         container: /code
+        options: cached
+      - type: cache
+        name: node_modules
+        container: /code/node_modules
     working_directory: /code
     run_as_current_user:
       enabled: true
       home_directory: /home/container-user
+    enable_init_process: true
 
 tasks:
 
@@ -20,8 +25,16 @@ tasks:
         - local: 3000
           container: 3000
 
+  install-deps:
+    description: Run initial yarn install for node_modules cache
+    run:
+      container: poker-game
+      command: yarn
+
   run-unit-tests:
     description: Run the unit tests
     run:
       container: poker-game
       command: yarn test-client --watchAll=false
+    prerequisites:
+      - install-deps
