--- a/batect.yml
+++ b/batect.yml
@@ -1,6 +1,21 @@
 containers:
-  poker-game:
+  poker-client:
     build_directory: ./containers/game-client/
+    volumes:
+      - local: .
+        container: /code
+        options: cached
+      - type: cache
+        name: node_modules
+        container: /code/node_modules
+    working_directory: /code
+    run_as_current_user:
+      enabled: true
+      home_directory: /home/container-user
+    enable_init_process: true
+
+  poker-server:
+    build_directory: ./containers/game-server/
     volumes:
       - local: .
         container: /code
@@ -19,35 +34,39 @@ tasks:
   start-client:
     description: Start the poker client
     run:
-      container: poker-game
-      command: yarn start-client
+      container: poker-client
       ports:
         - local: 3000
           container: 3000
     prerequisites:
-      - install-deps
+      - install-deps-client
 
-  # start-server:
-  #   description: Start the poker server
-  #   run:
-  #     container: poker-game
-  #     command: yarn start-server
-  #     ports:
-  #       - local: 5000
-  #         container: 5000
-  #   prerequisites:
-  #     - install-deps
+  start-server:
+    description: Start the poker server
+    run:
+      container: poker-server
+      ports:
+        - local: 5000
+          container: 5000
+    prerequisites:
+      - install-deps-server
 
-  install-deps:
+  install-deps-client:
     description: Run initial yarn install for node_modules cache
     run:
-      container: poker-game
+      container: poker-client
+      command: yarn --network-timeout 60000
+
+  install-deps-server:
+    description: Run initial yarn install for node_modules cache
+    run:
+      container: poker-server
       command: yarn --network-timeout 60000
 
   run-unit-tests:
     description: Run the unit tests
     run:
-      container: poker-game
+      container: poker-client
       command: yarn test-client --watchAll=false
     prerequisites:
-      - install-deps
+      - install-deps-client
