--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,51 +1,23 @@
 {
   "name": "server",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "build": "node ./util/build.js",
-    "lint": "tslint --project \"tsconfig.json\"",
-    "start": "node -r module-alias/register ./dist",
-    "start:dev": "nodemon --config nodemon.json",
-    "test": "nodemon --config nodemon.test.json"
+    "tsc": "npx tsc",
+    "start": "ts-node ./src/server"
   },
-  "_moduleAliases": {
-    "@daos": "dist/daos",
-    "@entities": "dist/entities",
-    "@shared": "dist/shared",
-    "@server": "dist/Server"
-  },
+  "environment": [
+    "node"
+  ],
   "dependencies": {
-    "command-line-args": "^5.1.1",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "helmet": "^3.22.0",
-    "http-status-codes": "^1.4.0",
-    "module-alias": "^2.2.2",
-    "morgan": "^1.10.0",
-    "winston": "^3.2.1"
-  },
-  "devDependencies": {
-    "@types/command-line-args": "^5.0.0",
-    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.6",
-    "@types/find": "^0.2.1",
-    "@types/helmet": "0.0.47",
-    "@types/jasmine": "^3.5.10",
-    "@types/jsonfile": "^6.0.0",
-    "@types/morgan": "^1.9.0",
-    "@types/node": "^14.0.1",
-    "@types/supertest": "^2.0.9",
-    "find": "^0.3.0",
-    "fs-extra": "^9.0.0",
-    "jasmine": "^3.5.0",
-    "jsonfile": "^6.0.1",
-    "nodemon": "^2.0.3",
-    "supertest": "^4.0.2",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
     "ts-node": "^8.10.1",
-    "tsconfig-paths": "^3.9.0",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.3"
   }
 }
