--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,5 +19,11 @@
     "morgan": "~1.9.1",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.2.3",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.0.0",
+    "typescript": "^3.9.3"
   }
 }
