--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "scripts": {
     "start-client": "yarn workspace client start",
     "test-client": "yarn workspace client test --watchAll=false",
+    "watch-client": "yarn workspace client test",
     "lint-client": "yarn workspace client eslint . --ext .js,.jsx,.ts,.tsx",
     "format-client": "yarn workspace client eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "start-server": "yarn workspace server start",
     "test-server": "yarn workspace server test",
+    "watch-server": "yarn workspace server test --watch",
     "lint-server": "yarn workspace server eslint . --ext .js,.ts",
     "format-server": "yarn workspace server eslint . --fix --ext .js,.ts"
   },
