--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,23 +5,23 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    # Runs a single command using the runners shell
-    - name: setup node
-      uses: actions/setup-node@v1
-      with:
-        node-version: 14.x
-    - name: install yarn
-      run: npm install -g yarn
-    - name: install dependency
-      run: yarn install
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      # Runs a single command using the runners shell
+      - name: setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - name: install yarn
+        run: npm install -g yarn
+      - name: batect - install client dependency
+        run: ./batect install-deps-client
