[mob] set up secrets and push into dockerhub

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
         run: ./batect test-all
       - name: build and push image to dockerhub
         run: |
-          docker tag poker-poker-server twlifeguard/poker-server:latest
-          docker tag poker-poker-client twlifeguard/poker-client:latest
+          docker login -u ${{ secrets.dockerhub_username }} -p ${{ secrets.dockerhub_password }}
+          docker tag poker-poker-server ${{ secrets.dockerhub_username }}/poker-server:latest
+          docker tag poker-poker-client ${{ secrets.dockerhub_username }}/poker-client:latest
           docker images
+          docker push ${{ secrets.dockerhub_username }}/poker-server:latest
+          docker push ${{ secrets.dockerhub_username }}/poker-client:latest
