--- a/batect.yml
+++ b/batect.yml
@@ -1,13 +1,7 @@
 containers:
   poker-client:
-    build_directory: ./containers/game-client/
-    volumes:
-      - local: .
-        container: /code
-        options: cached
-      - type: cache
-        name: node_modules
-        container: /code/node_modules
+    build_directory: .
+    dockerfile: containers/game-client/dev.Dockerfile
     ports:
       - local: 3000
         container: 3000
@@ -18,7 +12,8 @@ containers:
     enable_init_process: true
 
   poker-server:
-    build_directory: ./containers/game-server/
+    build_directory: .
+    dockerfile: containers/game-server/Dockerfile
     volumes:
       - local: .
         container: /code
@@ -36,6 +31,7 @@ containers:
     enable_init_process: true
 
 tasks:
+
   start-game:
     description: Start the poker client & server (if not started)
     run:
