[mob] build client docker image using production dockerfile

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
       - name: build and push image to dockerhub
         run: |
           docker login -u ${{ secrets.dockerhub_username }} -p ${{ secrets.dockerhub_password }}
+          docker build -f ./containers/game-client/Dockerfile -t ${{ secrets.dockerhub_username }}/poker-client:latest .
           docker tag poker-poker-server ${{ secrets.dockerhub_username }}/poker-server:latest
-          docker tag poker-poker-client ${{ secrets.dockerhub_username }}/poker-client:latest
           docker images
           docker push ${{ secrets.dockerhub_username }}/poker-server:latest
           docker push ${{ secrets.dockerhub_username }}/poker-client:latest
