--- a/batect.yml
+++ b/batect.yml
@@ -5,7 +5,6 @@ containers:
     ports:
       - local: 3000
         container: 3000
-    working_directory: /code
     run_as_current_user:
       enabled: true
       home_directory: /home/container-user
@@ -13,18 +12,10 @@ containers:
 
   poker-server:
     build_directory: .
-    dockerfile: containers/game-server/Dockerfile
-    volumes:
-      - local: .
-        container: /code
-        options: cached
-      - type: cache
-        name: node_modules
-        container: /code/node_modules
+    dockerfile: containers/game-server/dev.Dockerfile
     ports:
       - local: 5000
         container: 5000
-    working_directory: /code
     run_as_current_user:
       enabled: true
       home_directory: /home/container-user
@@ -77,7 +68,7 @@ tasks:
     description: Run the unit tests for server
     run:
       container: poker-server
-      command: yarn test-server
+      command: yarn test
     prerequisites:
       - install-deps-server
 
@@ -99,6 +90,6 @@ tasks:
     description: Run the unit tests for server
     run:
       container: poker-server
-      command: yarn lint-server
+      command: yarn lint
     prerequisites:
       - install-deps-server
