[mob] add server production dockerfile

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "tsc",
     "start": "ts-node ./src/Server",
     "test": "jest",
     "lint": "eslint . --ext .ts"
