--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
     "http-errors": "~1.6.3",
     "io-ts": "^2.2.4",
     "io-ts-types": "^0.5.6",
+    "jest-extended": "^0.11.5",
     "prettier": "^2.0.5",
     "tiny-types": "^1.14.1",
     "ts-node": "^8.10.1",
