--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,9 +46,8 @@ name: "Terraform"
 
 on:
   push:
-    branches:
-      - master
-  pull_request:
+    tags:
+      - v*
 
 jobs:
   terraform:
@@ -104,3 +103,11 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         # run: echo "Should be apply"
+  deploy:
+    name: "Deploy application"
+    runs-on: ubuntu-latest
+    needs: "terraform"
+    steps:
+      - name: dummy
+        run: |
+          echo "dummy deploy"
