--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -108,6 +108,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: "terraform"
     steps:
-      - name: dummy
-        run: |
-          echo "dummy deploy"
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: copy batect script to remote
+        uses: appleboy/scp-action@master
+        with:
+          # @TODO: retrieve host name dynamically
+          host: "ec2-13-229-87-242.ap-southeast-1.compute.amazonaws.com"
+          username: "ec2-user"
+          key: ${{ secrets.AWS_EC2_PEM_TEST1 }}
+          source: "./batect.yml, ./deploy.sh"
+          target: "."
+
+      - name: run batect task on remote
+        uses: appleboy/ssh-action@master
+        with:
+          host: "ec2-13-229-87-242.ap-southeast-1.compute.amazonaws.com"
+          username: "ec2-user"
+          key: ${{ secrets.AWS_EC2_PEM_TEST1 }}
+          script: "sh ./deploy.sh"
