--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -118,7 +118,7 @@ jobs:
           host: "ec2-13-229-87-242.ap-southeast-1.compute.amazonaws.com"
           username: "ec2-user"
           key: ${{ secrets.AWS_EC2_PEM_TEST1 }}
-          source: "./deploy/*"
+          source: "./deploy/deploy.sh, ./deploy/batect.yml"
           target: "."
 
       - name: run batect task on remote
