--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -118,8 +118,9 @@ jobs:
           host: "ec2-13-229-87-242.ap-southeast-1.compute.amazonaws.com"
           username: "ec2-user"
           key: ${{ secrets.AWS_EC2_PEM_TEST1 }}
-          source: "./deploy/deploy.sh, ./deploy/batect.yml"
+          source: "./deploy/*"
           target: "."
+          strip_components: 1
 
       - name: run batect task on remote
         uses: appleboy/ssh-action@master
