--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -127,4 +127,4 @@ jobs:
           host: "ec2-13-229-87-242.ap-southeast-1.compute.amazonaws.com"
           username: "ec2-user"
           key: ${{ secrets.AWS_EC2_PEM_TEST1 }}
-          script: "sh ./deploy.sh"
+          script: "sh ./deploy.sh '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}'"
