--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,9 +12,11 @@
     "node"
   ],
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.9.0",
+    "firebase-admin": "^8.12.1",
     "jest": "^24.9.0",
     "ts-jest": "^24.3.0",
     "typescript": "^3.9.3"
