[Mob] Add google env in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: batect - run linter
         run: ./batect lint-all
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
       - name: batect - run test
         run: ./batect test-all
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
       - name: build and push image to dockerhub
         run: |
           docker login -u ${{ secrets.dockerhub_username }} -p ${{ secrets.dockerhub_password }}
@@ -28,3 +32,5 @@ jobs:
           docker images
           docker push ${{ secrets.dockerhub_username }}/poker-server:latest
           docker push ${{ secrets.dockerhub_username }}/poker-client:latest
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
